--- a/css/header.css
+++ b/css/header.css
@@ -155,8 +155,11 @@ input:checked + .slider:before { transform: translateX(20px); }
 
 /* --- Responsive Overrides for Header --- */
 @media (max-width: 1190px) {
+    .logo {
+    height: 7vh;
+    }
     .site-header {
-        padding: 16px 24px;
+        padding: 10px 24px;
         display: grid;
         grid-template-columns: 1fr auto 1fr; /* Left | Center | Right */
         align-items: center;
